--- a/about/styles.css
+++ b/about/styles.css
@@ -1,3 +1,7 @@
+:root {
+    --text-color: rgb(78, 216, 254);
+}
+
 * {
     font-family: 'Arsenal', sans-serif;
     font-weight: bolder;
@@ -5,34 +9,37 @@
 }
 
 body {
-    background-color: rgb(124, 199, 252);
+    background-color: rgb(10, 82, 119);
 }
 
 #head-banner {
-    position: relative;
+    background-image: url('https://i.imgur.com/MF0CbXI.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 200px;
+    border-bottom: 2px solid var(--text-color);
 }
 
 #head-banner h1 {
-    float: center;
-    position: absolute;
-    text-align: center;
-    color: rgb(124, 199, 252);
+    text-align: left;
+    color: var(--text-color);
     font-size: 52px;
 }
 
 #head-banner img {
     width: 100%;
     height: 12rem;
-    border-bottom: 2px solid rgb(78, 216, 254);
+}
+
+#container {
+    position: relative;
 }
 
 a {
+    color: var(--text-color);
     text-decoration: none;
     font-size: 30px;
-}
-
-a:visited {
-    color: blue;
+    font-weight: bolder;
 }
 
 .page-tiles {
@@ -40,16 +47,35 @@ a:visited {
     flex-flow: row wrap;
     justify-content: space-between;
     height: 3rem;
+    text-align: center;
     margin: auto;
-    border: 2px solid blanchedalmond;
+}
+
+.page-tiles #homepage {
+    height: 100%;
+    width: 33%;
+    background-color: green;
+}
+
+.page-tiles #portfolio {
+    height: 100%;
+    width: 34%;
+    background-color: blue;
+}
+
+.page-tiles #contact {
+    height: 100%;
+    width: 33%;
+    background-color: red;
 }
 
 .about-container {
     display: flex;
     flex-flow: column;
-    justify-content: space-around;
     align-items: center;
+    color: var(--text-color);
     text-align: center;
+    padding: 5px;
 }
 
 .about-container h2 {
@@ -58,12 +84,11 @@ a:visited {
 
 .carousel-container {
     width: 40%;
-    margin: 0;
 }
 
 .carousel-images {
     width: 80%;
-    background: #4feafc;
+    background: rgb(0,22,42);
     padding: 5px;
     border-radius: 6px;
 }
@@ -71,6 +96,10 @@ a:visited {
 .carousel-images img {
     width: 100%;
     border-radius: 10px;
+}
+
+.carousel-images img:first-of-type {
+    display: block;
 }
 
 @media (max-width: 600px) {
