--- a/main.css
+++ b/main.css
@@ -1,3 +1,7 @@
+:root {
+    --text-color: rgb(78, 216, 254);
+}
+
 * {
     font-family: 'Arsenal', sans-serif;
     font-weight: bolder;
@@ -5,18 +9,20 @@
 }
 
 body {
-    background-color: rgb(124, 199, 252);
+    background-color: rgb(10, 82, 119);
 }
 
 #head-banner {
-    position: relative;
+    background-image: url('https://i.imgur.com/MF0CbXI.jpg');
+    background-size: cover;
+    width: 100%;
+    height: 200px;
+    border-bottom: 2px solid var(--text-color);
 }
 
 #head-banner h1 {
-    float: center;
-    position: absolute;
-    text-align: center;
-    color: rgb(124, 199, 252);
+    text-align: left;
+    color: var(--text-color);
     font-size: 52px;
 }
 
@@ -30,12 +36,10 @@ body {
 }
 
 a {
+    color: var(--text-color);
     text-decoration: none;
     font-size: 30px;
-}
-
-a:visited {
-    color: blue;
+    font-weight: bolder;
 }
 
 .page-tiles {
@@ -43,8 +47,33 @@ a:visited {
     flex-flow: row wrap;
     justify-content: space-between;
     height: 3rem;
+    text-align: center;
     margin: auto;
-    border: 2px solid blanchedalmond;
+}
+
+.page-tiles #about-me {
+    height: 100%;
+    width: 33%;
+    background-color: green;
+}
+
+.page-tiles #portfolio {
+    height: 100%;
+    width: 34%;
+    background-color: blue;
+}
+
+.page-tiles #contact {
+    height: 100%;
+    width: 33%;
+    background-color: red;
+}
+#main-container {
+    color: var(--text-color);
+    text-align: center;
+    height: 100%;
+    width: 100%;
+    margin: 10px
 }
 
 
