--- a/about/styles.css
+++ b/about/styles.css
@@ -23,6 +23,7 @@ body {
 #head-banner h1 {
     text-align: left;
     color: var(--text-color);
+    padding: 1rem;
     font-size: 52px;
 }
 
@@ -44,62 +45,68 @@ a {
 
 .page-tiles {
     display: flex;
-    flex-flow: row wrap;
+    flex-flow: row;
     justify-content: space-between;
     height: 3rem;
     text-align: center;
     margin: auto;
 }
 
-.page-tiles #homepage {
+.pagenav {
     height: 100%;
     width: 33%;
-    background-color: green;
-}
-
-.page-tiles #portfolio {
-    height: 100%;
-    width: 34%;
-    background-color: blue;
-}
-
-.page-tiles #contact {
-    height: 100%;
-    width: 33%;
-    background-color: red;
+    background-image: linear-gradient(rgb(139,249,254),rgb(11,20,33), rgb(70,126,162));
+    border-style: groove;
 }
 
 .about-container {
     display: flex;
-    flex-flow: column;
-    align-items: center;
+    flex-direction: row;
     color: var(--text-color);
-    text-align: center;
-    padding: 5px;
+    height: 800px;
+    margin: 1rem;
 }
 
 .about-container h2 {
-    font-size: 28px;   
+    font-size: 36px;
+    padding: 2rem;   
+}
+
+.aboutme-blurb {
+    text-align: center; 
+    width: 30%;
 }
 
 .carousel-container {
-    width: 40%;
+    display: flex;
+    justify-content: center;
+    width: 70%;
 }
 
 .carousel-images {
-    width: 80%;
-    background: rgb(0,22,42);
+    width: 90%;
+    background: var(--text-color);
     padding: 5px;
     border-radius: 6px;
+    box-sizing: border-box;
 }
 
 .carousel-images img {
     width: 100%;
     border-radius: 10px;
+    display: none;
 }
 
 .carousel-images img:first-of-type {
     display: block;
+}
+
+.carousel-btn img{
+    width: 50%;
+}
+
+.carousel-btn:hover {
+    cursor: pointer;
 }
 
 @media (max-width: 600px) {
