--- a/contact/styles.css
+++ b/contact/styles.css
@@ -24,53 +24,84 @@ body {
     text-align: left;
     color: var(--text-color);
     font-size: 52px;
-}
-
-#head-banner img {
-    width: 100%;
-    height: 12rem;
-}
-
-#container {
-    position: relative;
-}
-
-a {
-    color: var(--text-color);
-    text-decoration: none;
-    font-size: 30px;
-    font-weight: bolder;
+    padding: 1rem;
 }
 
 .page-tiles {
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: row;
     justify-content: space-between;
     height: 3rem;
     text-align: center;
     margin: auto;
 }
 
-.page-tiles #homepage {
-    height: 100%;
-    width: 33%;
-    background-color: green;
+.page-tiles a {
+    color: var(--text-color);
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: bolder;
 }
 
-.page-tiles #about-me {
-    height: 100%;
-    width: 34%;
-    background-color: blue;
-}
-
-.page-tiles #portfolio {
+.pagenav {
     height: 100%;
     width: 33%;
-    background-color: red;
+    background-image: linear-gradient(rgb(139,249,254),rgb(11,20,33), rgb(70,126,162));
+    border-style: groove;
 }
 
 header {
     color: var(--text-color);
     text-align: center;
     font-size: 12px;
+    padding: 2rem;
+    margin: 20px;
+}
+
+.socials-icons {
+    display: flex;
+    flex-flow: row;
+    justify-items: space-evenly;
+    text-align: center;
+    padding: 2rem;
+}
+
+.socials-icons #github {
+    height: 100%;
+    width: 25%;
+}
+
+.socials-icons #linkedin {
+    height: 100%;
+    width: 25%;
+}
+
+.socials-icons #email {
+    height: 100%;
+    width: 25%;
+}
+
+.socials-icons #resume {
+    height: 100%;
+    width: 25%;
+}
+
+#github img{
+    height: 100%;
+    width: 50%;
+}
+
+#linkedin img{
+    height: 50%;
+    width: 50%;
+}
+
+#email img{
+    height: 50%;
+    width: 50%;
+}
+
+#resume img {
+    height: 60%;
+    width: 60%;
 }
