--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@ body {
     text-align: left;
     color: var(--text-color);
     font-size: 52px;
+    padding: 1rem;
 }
 
 #head-banner img {
@@ -44,38 +45,46 @@ a {
 
 .page-tiles {
     display: flex;
-    flex-flow: row wrap;
+    flex-direction: row;
     justify-content: space-between;
     height: 3rem;
     text-align: center;
     margin: auto;
 }
 
-.page-tiles #about-me {
+.pagenav {
     height: 100%;
     width: 33%;
-    background-color: green;
+    background-image: linear-gradient(rgb(139,249,254),rgb(11,20,33), rgb(70,126,162));
+    border-style: groove;
 }
 
-.page-tiles #portfolio {
-    height: 100%;
-    width: 34%;
-    background-color: blue;
-}
-
-.page-tiles #contact {
-    height: 100%;
-    width: 33%;
-    background-color: red;
-}
 #main-container {
     color: var(--text-color);
-    text-align: center;
+    display: flex;
+    flex-direction: row;
     height: 100%;
     width: 100%;
     margin: 10px
 }
 
+#main-container img {
+    height: 30%;
+    width: 30%;
+    border: 7px solid var(--text-color);
+    border-radius: 5px;
+    margin: 1rem;
+}
+
+#welcome-info {
+    text-align: center;
+    width: 50%;
+    height: 25%;
+}
+
+#welcome-info h2 {
+    font-size: 34px;
+}
 
 @media (max-width: 600px) {
 
