--- a/about/styles.css
+++ b/about/styles.css
@@ -32,10 +32,6 @@ body {
     height: 12rem;
 }
 
-#container {
-    position: relative;
-}
-
 a {
     color: var(--text-color);
     text-decoration: none;
@@ -63,13 +59,13 @@ a {
     display: flex;
     flex-direction: row;
     color: var(--text-color);
-    height: 800px;
+    height: 600px;
     margin: 1rem;
 }
 
-.about-container h2 {
-    font-size: 36px;
-    padding: 2rem;   
+.about-container p {
+    font-size: 20px;
+    padding: 4px;  
 }
 
 .aboutme-blurb {
@@ -79,12 +75,11 @@ a {
 
 .carousel-container {
     display: flex;
-    justify-content: center;
-    width: 70%;
+    width: 50%;
 }
 
 .carousel-images {
-    width: 90%;
+    width: 80%;
     background: var(--text-color);
     padding: 5px;
     border-radius: 6px;
@@ -97,12 +92,16 @@ a {
     display: none;
 }
 
-.carousel-images img:first-of-type {
+.carousel-images img:first-child {
     display: block;
 }
 
+.carousel-btn {
+    width: 10%;
+}
+
 .carousel-btn img{
-    width: 50%;
+    width: 100%;
 }
 
 .carousel-btn:hover {
