--- a/myprojects/styles.css
+++ b/myprojects/styles.css
@@ -63,4 +63,48 @@ header {
     color: var(--text-color);
     padding: 1rem;
     text-align: center;
+    font-size: 32px;
+    border-bottom: 3px solid var(--text-color);
 }
+
+#game-title {
+    color: var(--text-color);
+    padding: 1rem;
+    text-align: center;
+    font-size: 25px;
+}
+
+#game-container {
+    display: flex;
+    height: 100%;
+}
+
+#wordle-board-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    overflow: hidden;
+}
+
+#wordle-game-board {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-gap: 4px;
+    border: 10px solid rgb(4,22,37);
+    border-radius: 12px;
+    box-sizing: border-box;
+}
+
+.wordle-char-tiles {
+    border: 2px solid rgb(25,212,230);
+    min-width: 80px;
+    min-height: 80px;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+#startbtn {
+    display: block;
+}
+
