made changes to how the Wordle board appeared on screen, and added some code to allow the player to type on the first line of the game board

--- a/about/styles.css
+++ b/about/styles.css
@@ -110,5 +110,13 @@ a {
 
 @media (max-width: 600px) {
 
+    .about-container p {
+        font-size: 14px;
+        padding: 2px;
+    }
+
+    #head-banner h1 {
+        padding: 0.5rem;
+    }
 
 }
