--- a/contact/styles.css
+++ b/contact/styles.css
@@ -105,3 +105,9 @@ header {
     height: 60%;
     width: 60%;
 }
+
+@media (max-width: 600px) {
+    #head-banner h1 {
+        padding: 0.5rem;
+    }
+}
