--- a/myprojects/styles.css
+++ b/myprojects/styles.css
@@ -113,13 +113,17 @@ header {
     grid-template-columns: repeat(6, 1fr);
     justify-content: center;
     grid-gap: 4px;
-    border: 2px solid red;
 }
 
 .keys {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     min-width: 4rem;
     min-height: 4rem;
     border-radius: 10px;
+    font-size: 16px;
+    cursor: pointer;
 }
 
 #startbtn {
@@ -137,5 +141,21 @@ header {
 
     #game-title {
         font-size: 18px;
+    }
+
+    .wordle-char-tiles {
+        min-width: 60px;
+        min-height: 60px;
+
+    }
+
+    #keyboard-keys {
+        grid-template-columns: repeat(5, 1fr);
+        grid-gap: 2px;
+    }
+
+    .keys {
+        min-width: 4rem;
+        min-height: 3rem;
     }
 }
