--- a/myprojects/styles.css
+++ b/myprojects/styles.css
@@ -38,7 +38,6 @@ body {
 a {
     color: var(--text-color);
     text-decoration: none;
-    font-size: 30px;
     font-weight: bolder;
 }
 
@@ -49,6 +48,7 @@ a {
     height: 3rem;
     text-align: center;
     margin: auto;
+    font-size: 30px;
 }
 
 .pagenav {
@@ -56,6 +56,45 @@ a {
     width: 33%;
     background-image: linear-gradient(rgb(139,249,254),rgb(11,20,33), rgb(70,126,162));
     border-style: groove;
+}
+
+#modal {
+    display: none;
+    background-color: rgb(0,0,0,0.2);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+    overflow: auto;
+}
+
+#modal-info {
+    display: flex;
+    flex-direction: column;
+	background-color: rgb(17,39,65,0.8);
+	height: 50%;
+	width: 50%;
+	border-radius: 10px;
+    margin-top: 15rem;
+}
+
+.modal-text {
+    position: relative;
+    text-align: center;
+    color: var(--text-color);
+    font-size: 45px;
+    margin: 4rem;
+}
+
+#choice-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin: 0;
+    color: var(--text-color);
+    font-size: 2rem;
 }
 
 header {
@@ -76,6 +115,7 @@ header {
 #game-container {
     display: flex;
     height: 100%;
+    padding-bottom: 10px;
 }
 
 #wordle-board-container {
@@ -88,7 +128,6 @@ header {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-gap: 4px;
-    border: 10px solid rgb(4,22,37);
     border-radius: 12px;
     box-sizing: border-box;
 }
@@ -141,6 +180,14 @@ header {
 
     #game-title {
         font-size: 18px;
+    }
+
+    .modal-text {
+        font-size: 18px;
+    }
+
+    #choice-container {
+        font-size: 1rem;
     }
 
     .wordle-char-tiles {
