--- a/myprojects/styles.css
+++ b/myprojects/styles.css
@@ -74,9 +74,10 @@ a {
     display: flex;
     flex-direction: column;
 	background-color: rgb(17,39,65,0.8);
-	height: 50%;
+	height: 40%;
 	width: 50%;
 	border-radius: 10px;
+    padding: 3px;
     margin-top: 15rem;
 }
 
@@ -169,6 +170,12 @@ header {
     display: block;
 }
 
+@media (max-width: 950px) {
+    .modal-text {
+        font-size: 22px;
+    }
+}
+
 @media (max-width: 600px) {
     #head-banner h1 {
         padding: 0.5rem;
@@ -179,10 +186,6 @@ header {
     }
 
     #game-title {
-        font-size: 18px;
-    }
-
-    .modal-text {
         font-size: 18px;
     }
 
