--- a/contact/styles.css
+++ b/contact/styles.css
@@ -36,12 +36,12 @@ body {
     height: 3rem;
     text-align: center;
     margin: auto;
+    font-size: 30px;
 }
 
-.page-tiles a {
+a {
     color: var(--text-color);
     text-decoration: none;
-    font-size: 30px;
     font-weight: bolder;
 }
 
@@ -148,11 +148,11 @@ header {
 
 @media (max-width: 600px) {
     #head-banner h1 {
-        padding: 0.5rem;
-        font-size: 52px;
+        padding: 0.2rem 0.5rem;
+        font-size: 40px;
     }
 
     .page-tiles {
-        font-size: 22px;
+        font-size: 18px;
     }
 }
